Services grid responsive alignment issue fix

--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -2,9 +2,9 @@
 //1200 / 16:
 $bp-largest: 75em; //1200px
 //800 / 16 :
-$bp-medium: 50rem; // 800px
+$bp-medium: 50em; // 800px
 //656 / 16
-$bp-small: 41rem; // 656px
+$bp-small: 41em; // 656px
 
 *,
 *::after,
