--- a/sass/layouts/navigation&logo.scss
+++ b/sass/layouts/navigation&logo.scss
@@ -11,13 +11,6 @@
 	z-index: 100;
 	width: 100%;
 
-	@media (max-width: $bp-medium) {
-		grid-column: full-start / center-start;
-		grid-row: 1/2;
-		display: flex;
-		flex-direction: column;
-	}
-
 	& ul {
 		list-style-type: none;
 		padding: 0 8rem;
